feature: Working on a cleaner Spider.